# oa-agent-connector

./: .gitignore  README.md  pyproject.toml
.superpowers/sdd/reports/: task-4-report.md
docs/: mcp_install_flow.md  oa_agent_connector.md  oa_mcp_colleague_guide.md  oa_mcp_user_output_standard.md
docs/superpowers/plans/: 2026-07-06-oa-mcp-search-attachments.md
examples/: mcp_config_after_install.json  mcp_config_unpacked_template.json
oa_agent_connector/: __init__.py  cli.py  client.py  config.py  credential_store.py  local_auth.py  mcp_server.py  security.py
tests/: test_client.py  test_config.py  test_credential_store.py  test_local_auth.py  test_mcp_server.py
