[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "oa-agent-connector"
version = "0.2.11"
description = "Agent-side OA MCP connector using existing OA endpoints"
requires-python = ">=3.9"
dependencies = ["keyring>=24.3,<26"]
readme = "README.md"

[project.scripts]
oa-agent = "oa_agent_connector.cli:main"
oa-agent-mcp = "oa_agent_connector.mcp_server:main"
oa-agent-mcp-config = "oa_agent_connector.config:main"
oa-agent-local-auth = "oa_agent_connector.local_auth:main"
